<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.MainActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/start_workout_button_text"
        android:drawableTop="@drawable/fitness_icon"
        android:id="@+id/start_workout_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="beginWorkoutButtonAction" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/main_activity_first_linear_layout"
        android:layout_below="@+id/start_workout_button">

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/workouts_button_text"
            android:background="@drawable/begin_workout_normal_button_bg"
            android:textColor="@color/white"
            android:id="@+id/workouts_button"
            android:onClick="goToWorkoutsListAction" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/main_activity_first_linear_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/about_button_text"
            android:background="@drawable/begin_workout_normal_button_bg"
            android:textColor="@color/white"
            android:id="@+id/about_button"
            android:onClick="goToAboutAction" />

    </LinearLayout>




</RelativeLayout>
