<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/do_workout_main_layout"
    android:onClick="screenClick"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:id="@+id/do_workout_linear_layout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/do_workout_exercise_image_view"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/do_workout_rest_text_view"
            android:textSize="50sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/exercise_capitalized"
        android:id="@+id/do_workout_exercise_name_text_view"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_above="@+id/time_text_view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:text="@string/zero"
        android:id="@+id/time_text_view"
        android:textColor="#000000"
        android:layout_above="@+id/exercise_counter_text_view"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/exercise_capitalized"
        android:id="@+id/exercise_counter_text_view"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C9000000"
        android:id="@+id/workout_paused_overlay"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_paused"
            android:textSize="35sp"
            android:textColor="#ffffff"
            android:id="@+id/workout_paused_text_view"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:text="@string/tap_the_screen_to_resume"
            android:id="@+id/workout_paused_information_text_view"
            android:layout_below="@+id/workout_paused_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

    </RelativeLayout>

</RelativeLayout>